[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["johnnyflame <johnnyflamelee@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^1.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
